Crear atributo validacion en backend
