# public/api-docs/models/openapi.yaml
@@ -1303,6 +1303,9 @@ components:
           enum:
             - reader
             - writer
+        validation:
+          description: User validation
+          type: boolean
 #        _links:
 #          description: link relations
 #          type: object
@@ -1325,6 +1328,7 @@ components:
           username: user1508
           email: miw.etsisi@upm.es
           role: reader
+          validation: false
 #          _links:
 #            parent:
 #              href: /api/v1/users
@@ -1338,6 +1342,7 @@ components:
             username: user1508
             email: miw.etsisi@upm.es
             role: reader
+            validation: false
 #            _links:
 #              parent:
 #                href: /api/v1/users
@@ -1546,11 +1551,15 @@ components:
                 enum:
                   - reader
                   - writer
+              validation:
+                description: User validation
+                type: boolean
             example:
               username: username
               email: User_email@example.com
               password: User_password
               role: reader
+              validation: false
     LoginRequestBody:
       description: Registered **username** and **password**
       required: true
